deploy/mycelic/k8s/mycelic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mycelic
spec:
  selector:
    app: mycelic
  ports:
    - name: http
      port: 8080
      targetPort: http
